# amazon-sp-api-pa-main

./: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/: ui_comp_hook.c
fonts/: ui_font_datefont.c  ui_font_labelfont.c  ui_font_locategoodsfont.c  ui_font_percentage_font_white.c  ui_font_revenue_order_number_font.c  ui_font_revenuetodayfont.c  ui_font_timefont.c  ui_font_welcomefont.c
images/: ui_img_825004913.c  ui_img_image_1_png.c  ui_img_messages_png.c  ui_img_mug_png.c  ui_img_pa_rudolph_png.c  ui_img_package_png.c  ui_img_polorudolph_png.c  ui_img_vector_png.c  ui_img_view_messages_button_png.c  ui_img_view_orders_button_png.c
screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
